<resources>
	<string name="app_name">AL Dict</string>

	<string name="new_word">New Word</string>
	
	<string name="word">Word</string>
	<string name="translation">Translation</string>
	<string name="transcription">Transcription</string>
	<string name="synonyms">Synonyms</string>
	<string name="topic">Topic</string>
	<string name="note">Note</string>

	<string name="submit">Submit</string>
</resources>
