<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:bind="http://schemas.android.com/tools"
	>
	<data>
		<variable name="wordModel" type="com.ancientlore.aldict.WordViewModel"/>

		<import type="android.view.View"/>
	</data>

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		>
		<include
			layout="@layout/toolbar"
			android:id="@+id/include"
			/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/wordWrapper"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@+id/include"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintBottom_toTopOf="@+id/translationWrapper"
			app:layout_constraintVertical_chainStyle="packed"
			>
			<android.support.v7.widget.AppCompatEditText
				android:id="@+id/word"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textCapWords"
				android:singleLine="true"
				android:maxLines="1"
				android:hint="@string/word"
				android:text="@={wordModel.name}"
				/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/translationWrapper"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@+id/wordWrapper"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintBottom_toTopOf="@+id/transcriptionWrapper"
			>
			<android.support.v7.widget.AppCompatEditText
				android:id="@+id/translation"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textCapWords"
				android:singleLine="true"
				android:maxLines="1"
				android:hint="@string/translation"
				android:text="@={wordModel.translations}"
				/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/transcriptionWrapper"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@+id/translationWrapper"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintBottom_toTopOf="@+id/synonymsWrapper"
			>
			<android.support.v7.widget.AppCompatEditText
				android:id="@+id/transcription"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textCapWords"
				android:singleLine="true"
				android:maxLines="1"
				android:hint="@string/transcription"
				android:text="@={wordModel.transcription}"
				/>
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/synonymsWrapper"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@+id/transcriptionWrapper"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			app:layout_constraintEnd_toStartOf="@+id/addSynonymBtn"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintBottom_toTopOf="@+id/synonymsList"
			>
			<android.support.design.widget.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/synonyms"
				android:text="@={wordModel.synonym}"
				/>
		</android.support.design.widget.TextInputLayout>

		<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:srcCompat="@drawable/plus"
			android:id="@+id/addSynonymBtn"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			app:layout_constraintTop_toTopOf="@+id/synonymsWrapper"
			app:layout_constraintBottom_toBottomOf="@+id/synonymsWrapper"
			android:contentDescription="@string/synonyms"
			android:onClick="@{() -> wordModel.onAddSynonymClicked()}"
			/>

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/synonymsList"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/synonymsWrapper"
			app:layout_constraintBottom_toTopOf="@+id/noteWrapper"
			bind:text="TextView"
			android:textSize="16sp"
			android:text="@={wordModel.synonyms}"
			android:visibility="@{wordModel.synonyms.get().isEmpty() ? View.GONE : View.VISIBLE}"
			bind:visibility="gone"
			/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/noteWrapper"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintTop_toBottomOf="@+id/synonymsList"
			>
			<android.support.design.widget.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/note"
				android:text="@={wordModel.note}"
				/>
		</android.support.design.widget.TextInputLayout>

		<android.support.v7.widget.AppCompatButton
			android:text="@string/submit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/submitButton"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginBottom="8dp"
			android:onClick="submitNewWord"
			/>
	</android.support.constraint.ConstraintLayout>
</layout>